app running, main page func, get api call, pom ioutil depend