@@ -7,15 +7,28 @@ import java.net.URL;
 
 import static stepDefinitions.TestSetup.driver;
 
+import java.io.IOException;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+
 public class GetPropertyOwnerById {
-    public void applicationUpRunning(String apiEndPoint) throws IOException {
-        validateResponseCode200(apiEndPoint);
-    }
-    private void validateResponseCode200(String apiEndPoint) throws IOException {
-        URL url = new URL(apiEndPoint);
-        HttpURLConnection httpURLConnection = (HttpURLConnection) url.openConnection();
-        httpURLConnection.setRequestMethod("GET");
-        int responseCode = httpURLConnection.getResponseCode();
-        Assert.assertEquals("The Application Is Up And Running", 200, responseCode);
+
+    public static void main(String[] args) {
+        try {
+            String uri = "http://localhost:8080/api/owner/search?tin=123456789";
+            HttpClient client = HttpClient.newHttpClient();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create(uri))
+                    .GET()
+                    .build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            System.out.println("Response code: " + response.statusCode());
+            System.out.println("Response body: " + response.body());
+        } catch (IOException | InterruptedException e) {
+            e.printStackTrace();
+        }
     }
 }
+
